--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,5 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="beer_detail_height">32dp</dimen>
+    <dimen name="beer_detail_width">66dp</dimen>
 </resources>
