--- a/app/src/main/res/layout/row_layout.xml
+++ b/app/src/main/res/layout/row_layout.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="180dp"
-    android:padding="2dp">
+    android:layout_margin="2dp"
+    android:background="@color/design_default_color_on_primary">
 
     <ImageView
         android:id="@+id/icon"
@@ -61,7 +62,6 @@
         android:layout_toEndOf="@id/label_beer_abv"
         android:gravity="center_vertical|start"
         android:padding="4dp"
-        android:text="8.9"
         android:textSize="14sp" />
 
     <TextView
@@ -85,7 +85,6 @@
         android:layout_toEndOf="@id/label_beer_ibu"
         android:gravity="center_vertical|start"
         android:padding="4dp"
-        android:text="1.1"
         android:textSize="14sp" />
 
     <TextView
@@ -109,7 +108,6 @@
         android:layout_toEndOf="@id/label_beer_ebc"
         android:gravity="center_vertical|start"
         android:padding="4dp"
-        android:text="1.1"
         android:textSize="14sp" />
 
     <TextView
@@ -133,6 +131,6 @@
         android:layout_toEndOf="@id/label_beer_srm"
         android:gravity="center_vertical|start"
         android:padding="4dp"
-        android:text="1.1"
+
         android:textSize="14sp" />
 </RelativeLayout>
