--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,8 +24,7 @@
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btn_next"
-        android:layout_width="wrap_content"
-        android:layout_height="56dp"
+        style="@style/FloatingButtonDimens"
         android:layout_gravity="bottom|end"
         android:layout_marginEnd="30dp"
         android:layout_marginBottom="30dp"
@@ -35,8 +34,7 @@
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btn_previous"
-        android:layout_width="wrap_content"
-        android:layout_height="56dp"
+        style="@style/FloatingButtonDimens"
         android:layout_gravity="bottom|start"
         android:layout_marginStart="30dp"
         android:layout_marginBottom="30dp"
