--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,9 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+
     <dimen name="beer_detail_height">32dp</dimen>
-    <dimen name="beer_detail_width">66dp</dimen>
+    <dimen name="beer_detail_width">64dp</dimen>
+
+    <dimen name="beer_page_img_height">500dp</dimen>
+    <dimen name="beer_page_img_width">200dp</dimen>
 </resources>
