--- a/app/src/main/res/layout/row_layout.xml
+++ b/app/src/main/res/layout/row_layout.xml
@@ -2,8 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="180dp"
-    android:layout_margin="2dp"
-    android:background="@color/design_default_color_on_primary">
+    android:layout_margin="2dp">
 
     <ImageView
         android:id="@+id/icon"
@@ -14,7 +13,9 @@
         android:layout_alignParentBottom="true"
         android:layout_margin="5dp"
         android:contentDescription="TODO"
-        android:src="@mipmap/ic_launcher" />
+        android:scaleType="centerInside"
+        android:src="@drawable/punk_beer_default"
+        android:outlineSpotShadowColor="@color/colorBlack"/>
 
     <TextView
         android:id="@+id/beer_name"
@@ -100,4 +101,6 @@
         android:layout_below="@+id/beer_ibu"
         android:layout_toEndOf="@id/label_beer_srm"
         android:gravity="center_vertical|start" />
+
+
 </RelativeLayout>
