--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,9 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+
+        <item name="android:textViewStyle">@style/LatoTextViewStyle</item>
+        <item name="android:textColor">@color/colorBlack</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -38,5 +41,10 @@
         <item name="android:textSize">16sp</item>
         <item name="android:padding">4dp</item>
     </style>
+
+    <style name="LatoTextViewStyle">
+        <item name="android:fontFamily">@font/lato</item>
+    </style>
+
 
 </resources>
