--- a/app/src/main/res/drawable/gradient_background3.xml
+++ b/app/src/main/res/drawable/gradient_background3.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:angle="45"
-        android:endColor="@color/colorPrimary"
-        android:startColor="#e1eec3" />
+        android:angle="90"
+        android:endColor="#DD8415"
+        android:startColor="@color/colorPrimaryDark" />
 </shape>
