--- a/app/src/main/res/layout/detail_page.xml
+++ b/app/src/main/res/layout/detail_page.xml
@@ -5,7 +5,7 @@
     android:id="@+id/details_activity_layout"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@drawable/gradient_background"
+    android:background="@drawable/gradient_list"
     android:padding="20dp">
 
 
