--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,9 +2,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.ocruze.punkbeers.presentation.view.MainActivity">
+
+    <item
+        android:id="@+id/search_icon"
+        android:icon="@drawable/ic_baseline_search_24"
+        android:title="Search"
+        app:showAsAction="ifRoom|collapseActionView"
+        app:actionViewClass="android.widget.SearchView"/>
+
     <item
         android:id="@+id/action_help"
+        android:icon="@drawable/ic_baseline_help_24"
         android:orderInCategory="100"
         android:title="@string/action_help"
-        app:showAsAction="never" />
+        app:showAsAction="ifRoom" />
 </menu>
